--- a/index.html
+++ b/index.html
@@ -11,23 +11,25 @@
     <header>
         <h1>DANIEL GOMEZ ROZO</h1>
     </header>
-    <div id="characters">    
-      
+    <div id="">    
+      <select name="" id="characters">
+          <option value="" id="">Select one characters</option>
+          <option value="allCharacter" id="optionCharacter">All the characters</option>
+      </select>
+      <h2 class="api">Rick And Morty</h2>
+
     </div>
-    <main id="main-card">
-        <h2>Rick And Morty</h2>
+    <main id="main-card" class="template">
         <template id="template-card">
             <div class="card">
                 <h2 class="name-card"></h2>
-                <img class="img-card" src="" alt="">
+                <img class="img-card" src="" alt="" width="250" height="">
                 <hr>
-                <p class="quote-card"></p>
+                <p class="gender-card"></p>
             </div>
         </template>
     </main>
-    <button id="btn-generate">Generate Api</button>
-    <footer>@DanielGomez</footer>
+    <footer>@DanielGomez- API Rick and Morty</footer>
     <script src="index.js"></script>
-    <script src="api.js"></script>
 </body>
 </html>
