Taller metodo fetch con la api Rick and Morty lista

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="">    
       <select name="" id="characters">
           <option value="" id="">Select one characters</option>
-          <option value="allCharacter" id="optionCharacter">All the characters</option>
+          <option value="allCharacters" id="optionCharacter">All the characters</option>
       </select>
       <h2 class="api">Rick And Morty</h2>
 
@@ -29,7 +29,7 @@
             </div>
         </template>
     </main>
-    <footer>@DanielGomez- API Rick and Morty</footer>
+    <footer>@DanielGomez - API Rick and Morty</footer>
     <script src="index.js"></script>
 </body>
 </html>
